--- a/css/variables.css
+++ b/css/variables.css
@@ -3,7 +3,7 @@
    =========================================== */
 
 :root {
-    /* Font Scale */
+    /* Font Scale - wird per JS überschrieben */
     --font-scale: 1;
     --base-font-size: 16px;
 
