--- a/css/main.css
+++ b/css/main.css
@@ -2,25 +2,21 @@
    Main CSS - Import All Modules
    =========================================== */
 
-/* Foundation */
+/* Core */
 @import 'variables.css';
 @import 'base.css';
-
-/* Utilities & Layout */
-@import 'utilities.css';
 @import 'layout.css';
 
 /* Components */
-@import 'components.css';
+@import 'components/navbar.css';
+@import 'components/bottom-nav.css';
+@import 'components/buttons.css';
+@import 'components/cards.css';
+@import 'components/forms.css';
+@import 'components/toast.css';
+@import 'components/modal.css';
 
 /* Pages */
-@import 'game.css';
-@import 'settings.css';
-@import 'points.css';
-@import 'stats.css';
-@import 'pages.css';
-
-/* Special Features */
-@import 'dev-tools.css';
-@import 'easter-eggs.css';
+@import 'pages/game.css';
+@import 'pages/pages.css';
 
